# vg-beat-detectors

./: .gitattributes  .gitignore  CITATION.cff  README.html  README.md  capacity.csv  capacity_full.csv  commands.txt  correlation.csv  example.py  pyproject.toml  requirements.txt  visibilitygraphdetector.py
WIP_metric/: calculate_correlation.py  capacity.py  metrics.ipynb  testing.ipynb
src/vg-ecg-detectors/: example.ipynb
src/vg_beat_detectors/: __init__.py  fast_nvg.py  fast_whvg.py  vg_detector.py  vg_metric.py
src/vg_ecg_detectors/: __init__.py  fast_nvg.py  fast_whvg.py
src/vg_ecg_detectors_emrich/: __init__.py  fast_nvg.py  fast_whvg.py  vg_detector.py  visibilitygraphdetector.py
tests/: test.py
vignette/: refs.bib  vg_beat_detectors.Rmd  vg_beat_detectors.html  vg_beat_detectors.md  vg_ecg_detectors.Rmd  vg_ecg_detectors.html  vg_ecg_detectors.md  vignette_styles.css
